--- a/app/src/main/res/layout/activity_carro.xml
+++ b/app/src/main/res/layout/activity_carro.xml
@@ -1,57 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:fitsSystemWindows="true"
         tools:context=".activity.CarroActivity">
 
-    <!--Toolbar !-->
-    <include layout="@layout/include_toolbar"/>
-
-    <android.support.v7.widget.CardView
+    <!--Conteúdo do scroll !-->
+    <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/card_view"
-            android:clickable="true"
-            card_view:cardBackgroundColor="@color/white"
-            card_view:cardCornerRadius="2dp"
-            card_view:cardElevation="6dp">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <!-- Views com dados do carro !-->
+        <include layout="@layout/include_activity_carro"/>
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <!--Layout do appBar !-->
+    <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
+            android:layout_width="match_parent"
+            android:layout_height="260dp"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="2dp">
+                android:id="@+id/collapsingToolbarLayout"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                    android:id="@+id/img"
-                    android:layout_width="@dimen/foto_carro_width" android:layout_height="@dimen/foto_carro_height"
-                    android:layout_gravity="center"
-                    android:scaleType="fitXY"/>
-
-            <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/gray"
-                    android:layout_marginBottom="6dp"
-                    android:layout_marginTop="6dp"/>
+                    android:layout_height="match_parent"
+                    android:id="@+id/appBarImg"
+                    android:background="@drawable/header_appbar"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax"/>
 
-            <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
+            <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
 
-                <TextView android:layout_width="match_parent"
-                          android:id="@+id/tDesc"
-                          android:layout_height="match_parent"
-                          android:layout_weight="1"
-                          android:textColor="@color/primary_dark"
-                          android:layout_margin="8dp"/>
-
-            </ScrollView>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:clickable="true"
+            android:src="@drawable/ic_favorite"
+            android:tint="@color/gray"
+            app:layout_anchor="@+id/appBar"
+            app:layout_anchorGravity="end|bottom|right"/>
+</android.support.design.widget.CoordinatorLayout>
