--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,55 +2,53 @@
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        tools:openDrawer="start">
+        android:fitsSystemWindows="true">
 
-
-    <!--Bloco 1: conteúdo da tela !-->
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/coordinatorLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/content">
+            android:layout_height="match_parent">
 
-        <!-- Toolbar !-->
-        <include layout="@layout/include_toolbar"/>
-
-        <!--Tabs + viewPage !-->
-        <android.support.design.widget.TabLayout
+        <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tabLayout"
-                android:background="@color/primary"/>
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <include layout="@layout/include_toolbar" />
+
+            <android.support.design.widget.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:layout_weight="1"
-                android:background="@color/white"
-                android:id="@+id/viewPager"/>
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_marginBottom="@dimen/fab_margin"
+                android:layout_marginRight="@dimen/fab_margin"
+                android:src="@android:drawable/ic_input_add"
+                android:tint="#fff000" />
+    </android.support.design.widget.CoordinatorLayout>
 
-      <!-- Cria Navigation Drawer!-->
-      <android.support.design.widget.NavigationView
-              android:id="@+id/nav_view"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:layout_gravity="start"
-              android:fitsSystemWindows="true"
-              app:headerLayout="@layout/nav_drawer_main"
-              app:menu="@menu/nav_drawer_menu"/>
-
-
-    <!--  &lt;!&ndash; Adiciona conteúdo na tela !&ndash;&gt;
-      <include
-              layout="@layout/app_bar_main"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"/>-->
-
+    <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_drawer_main"
+            app:menu="@menu/nav_drawer_menu" />
 </android.support.v4.widget.DrawerLayout>
