Implementando OkHttp com classe utilitário

--- a/app/src/main/res/layout/fragment_carros.xml
+++ b/app/src/main/res/layout/fragment_carros.xml
@@ -16,4 +16,6 @@
             android:scrollbarStyle="outsideOverlay" android:scrollbars="vertical"
     />
 
+    <include layout="@layout/include_progress"/>
+
 </FrameLayout>
