--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                 android:layout_marginBottom="@dimen/fab_margin"
                 android:layout_marginRight="@dimen/fab_margin"
                 android:src="@android:drawable/ic_input_add"
-                android:tint="#fff000" />
+                android:tint="#fff" />
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
